pkg/kgateway/translator/gateway/testutils/inputs/jwt/listenerset.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: kgateway
  allowedListeners:
    namespaces:
      from: All
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
spec:
  parentRefs:
    - name: example-listenerset
      group: gateway.networking.k8s.io
    kind: ListenerSet
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: example-svc
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /foo
    - backendRefs:
        - name: example-svc
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /bar
---
apiVersion: v1
kind: Service
metadata:
  name: example-svc
spec:
  selector:
    test: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: test
